@@ -4,15 +4,17 @@ Hash: SHA256
 DIST mplus-TESTFLIGHT-055.tar.xz 8853404 SHA256 19b2139d69c7bf4397920767affa01d2bad200610147abbcd1e2d91b10017f4d SHA512 02846d2291e9d57b3b53fa433400fd4551361bb298c1db951606f24d3baf3853a656329df458b80f504876f0b88afa84c2be2540a2868fc578d94a04d616188a WHIRLPOOL 959747f0e1c3aa09bf494201bf3a34ac1bb407c399c9e393cd0f200eeef21e16a3ad8db8ff0dbaa69011c00dbc844a16faa9d945d5b4cd6c7ec4d50f8fe11ab2
 DIST mplus-TESTFLIGHT-056.tar.xz 9000172 SHA256 f0cc16810effb5e21e559a15895525a9e4179765c5ab44f9140afd18e8ce7b8e SHA512 d88791d59e9ed377d000459f1609bab266a15327fcc51ed0ca23cb5a2d52d53e72a6fa705d8bd0fc8d96643b9e91c3d896424d05270b982f05946ed9a75e8d31 WHIRLPOOL a91b2e19e4d80ed755a427997c0e5c8635dc293eab8b223d42b67b51ba23504a681eb68cbc0526bdcd6b35dd5fc50fd8f6ac114b345561ac209ca5d135014165
 DIST mplus-TESTFLIGHT-057.tar.xz 9278836 SHA256 c5a4d76c25f1bc2f9c8c12533330b00b29afe254e5762f49495c67d34838218e SHA512 39c64ba6ba6a2844c13019b9ac0d458fc860493374cf71cdfe097ebeefa57db8a7065ea6e05358d8940496cbefed81cf3b9523cf04edf43cc81c5a24a6b8d64f WHIRLPOOL df77ff85196b0e47b4c806120f5952a06fc83e1db15b661c44601008ce193e803e43b5bc9c0cc1e535f624a86d4c40ce01cd2a3cd9c9c9cb62361a3e688ab58e
+DIST mplus-TESTFLIGHT-058.tar.xz 9449816 SHA256 78c671d6947183d5cea8ea4390fcd73f029ea488099347d3ebb5af6b580615c9 SHA512 aeee67271abde680950fc9b99d9ed142946835a9f9f8314f10e141e77b2a9190c04f2564ff0ce826a0ff2c090a48f387cc0236925f52a5a5ef7215a58603bcab WHIRLPOOL 34acf9a4957c351c00d0dfa04cb835add4e074d989c4d00bc254ef05681417bcecaaf1454e7ad06049facab93b16b216b63703b27da545ec25d1ac9bd0653eaf
 EBUILD mplus-outline-fonts-0_pre055.ebuild 1060 SHA256 08fbc90aa7cc270320b46388b7f6fc7757cdc09327252543885de7047d9291f2 SHA512 8bdac2f9aaef4bed8f3f5bf842424d4286cf90d511e13fc947ea9dae01adcde8bf5866f84083063f54fb5d85d886d35ca48132deebd8741544aa1bf1d2046f50 WHIRLPOOL 45f03ed71f15fcdcfeee6694dc695647f0624d6fc0d431ee6cc6862baa16f39346e78ad46deb3c400e6300045dbaecce7d1fa52367e6f2305ec6e78567533db2
 EBUILD mplus-outline-fonts-0_pre056.ebuild 1065 SHA256 fd0ac9f55fc8814d086b7e6da57891f0239bad09d0df01013cc25d071e30d685 SHA512 46944db9b55a4dfba229fcb3b97154acecf4255fe562797a2d65035d376784f2ef16c43dbd0accfea0e09974d7bb72217fbe8629058116142916c0b7c85a9736 WHIRLPOOL 9924c0ca7e02ee24b6bd65bea69080edfa1c592cce17ac245eebc4fb4746731fbfa7af7a755ea46838f4c189fba1c49ad40066cabdd8cb3b0edfa7009689cff7
 EBUILD mplus-outline-fonts-0_pre057.ebuild 1068 SHA256 2127860cee492f4eef8f8302071b3b960a8a58ab3ffd933977c45d8b634e93bd SHA512 38ae9668d072860ed262e6cba27e6e9c67c146baacf8fcc7c50ce7cc05c06a068dddad8911d6973714ae0c74001b3a87fd41022383476b7a5f4537ec6623713c WHIRLPOOL 8411b2f998e2335d50ce41d8df17884b9faa414ea026a44f7a34090d334c8243165ca0bb82c37f1356e1802616524db2f3cf7845b44d843fc114a6fb46623a6d
-MISC ChangeLog 8871 SHA256 1e81c1313911fccef72c9350f8ae15f469d53ff6ce273b1fb14566cf41e3acde SHA512 408d254951851d4d381f77c6db4743cb46ad1adc506bb880eb908db8c4d035f5a734c57012592de3415924c9487affb7a9a3c2558d124906d9ce78f070887297 WHIRLPOOL d4a2f855bd8b6950158664897e08985c222be9253b38e29e4a64cb138dfe9793fc14bcd8f48238da1f1eebc82246ed61d684c7751fffb4948a11030b08bad58a
+EBUILD mplus-outline-fonts-0_pre058.ebuild 1063 SHA256 cc415c75802112f1db31f6e02f4795b3b38af6bc63756e97d568b68d9a29b210 SHA512 748e4d365678bc59840a4a448268a6f1579f4594807941d686632b9781ccca6ca517365f04fd88e77c3d65faec9767b77118367bc201f85b921b9971c254121e WHIRLPOOL 13a6a6a3547e74cfe4247dfbf29a91fcc5356e688e06e600262eaa471bca000fdf0bb9c3235df868731223ffeb9e8931458c44b2b121742ecf3b7ec3435929d1
+MISC ChangeLog 9031 SHA256 ce33fe6c499d3d7bd9efc7f9cb4c67c2af07b14571080a349ba03c1c878c6125 SHA512 20c82fd872a33eb2553e8c9a7c749fb2ecd2d6214fa8a9eacac05249ec1a8e2b3672f543675f3fcc087bacf10e7f87909ea29b02c1f8ffc2f5c0456de5ebcd39 WHIRLPOOL df32500c298267c8b9371153ffddde41c251ffdf91602d3cdb5ee6e526e04215e048cb6e4925bdce540c335ffdc57c5eb0964d99bf62029bb7543cf6dd26ca21
 MISC metadata.xml 285 SHA256 75c916c235e71f1c9f70ade5d259a3faaba30dcf8fb5cbfb2459cb21f937ddd4 SHA512 e637f3a989c8cdced93149686310cc458e35b6823efecd79e2852047da52ce6c4967645ba5743dc02324552711b31998e1f17bb7ce9764b1fc42a15d3b75c07c WHIRLPOOL 8ebcc5836ccdf91289f40ba505b0f16d902d176bd36a90a729956a01ca15eac0c8d30856fa224acb5e2e7641c18c12ce3fb194cf12fd61322c0ce29c1d5f12f9
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlJpMHkACgkQL46suuyRem1ryQCgpNY/eyLq44WEPJsDNOaY8uZy
-xeEAn0AjbGOmAhPmPXJH09jqh1JQjy3X
-=KIdC
+iEYEAREIAAYFAlM+fYcACgkQL46suuyRem2NVACdGr7bvo5oUdTd/aMnOMwPvvUt
+U1QAn2htAoVr8sjWP+8J/AfYLrUqKP+J
+=bXYb
 -----END PGP SIGNATURE-----
