@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile install postinst postrm prepare setup
+DEPEND=ipafont? ( media-gfx/fontforge media-fonts/ja-ipafonts ) X? ( x11-apps/mkfontdir media-fonts/encodings )
+DESCRIPTION=M+ Japanese outline fonts
+EAPI=5
+HOMEPAGE=http://mplus-fonts.sourceforge.jp/ http://ossipedia.ipa.go.jp/ipafont/
+IUSE=ipafont X
+KEYWORDS=~amd64 ~hppa ~ia64 ~ppc ~x86 ~ppc-macos ~x86-macos
+LICENSE=mplus-fonts ipafont? ( IPAfont )
+RESTRICT=binchecks strip
+SLOT=0
+SRC_URI=mirror://sourceforge.jp/mplus-fonts/6650/mplus-TESTFLIGHT-058.tar.xz
+_eclasses_=eutils	af81d52c25ec93fbdff71e0efb0de7b7	font	37271e0911f39dd15a28adcaf94f6956	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=2b5017af6d2fe1f0158112344d2649bf
